2003-06-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/setregid.c (__setregid): Make POSIX
	compliant.  Don't change sgid.
	* sysdeps/unix/sysv/linux/i386/setreuid.c (__setreuid): Make POSIX
	compliant.  Don't change suid.

	* config.h.in: Add have-forced-unwind.
	* configure.in: Add AC_SUBST(libc_cv_forced_unwind).

2003-06-07  Ulrich Drepper  <drepper@redhat.com>

	* test-skeleton.c (main): If EXPECTED_STATUS is defined check that
	returned status from child matches.

	* Makeconfig (gnulib): Add -lgcc_eh once again.

2003-06-06  Ulrich Drepper  <drepper@redhat.com>

	* test-skeleton.c (main): Use TEMP_FAILURE_RETRY with waitpid.

	* sysdeps/unix/sysv/linux/i386/sysdep.h (ASMFMT_2): Only allow
	%edx for first parameter.  This means no pushl and therefore the
	unwind info isn't screwed up.

2003-06-04  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/dl-machine.h (RTLD_START): Fix top-of-stack backtrace.
	* sysdeps/unix/sysv/linux/alpha/clone.S: Likewise.
	* sysdeps/alpha/elf/start.S: Likewise.  Remove pointless allocation.
	* sysdeps/unix/sysv/linux/alpha/rt_sigaction.S: Use standard ldgp
	entry sequence and explicit relocs.  Add unwind info for sigreturn
	and rt_sigreturn.
	* configure.in (libc_cv_asm_cfi_directives): Test .cfi_remember_state.

	* sysdeps/unix/sysv/linux/alpha/syscalls.list (semtimedop): New.
	Annotate some parameters.
	* sysdeps/unix/sysv/linux/alpha/sysdep.h (__NR_semtimedop): New.

	* sysdeps/unix/sysv/linux/alpha/gettimeofday.S: Fix typo in conversion.

	* include/libc-symbols.h (symbol_set_declare): Use arrays
	of unspecified size.

2003-06-04  Jakub Jelinek  <jakub@redhat.com>

	* config.make.in (ASFLAGS-config): New.
	* Makeconfig (ASFLAGS): Append $(ASFLAGS-config).
	* configure.in (libc_cv_as_noexecstack): New check.
	(ASFLAGS_config): Substitute.

2003-06-04  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/fpu/bits/mathinline.h (log1p, asinh, acosh, atanh,