@@ -1,4 +1,4 @@
-/* Copyright (C) 1998, 2000, 2002 Free Software Foundation, Inc.
+/* Copyright (C) 1998, 2000, 2002, 2003 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -17,9 +17,11 @@
    02111-1307 USA.  */
 
 #include <errno.h>
-#include <sys/syscall.h>
 #include <sys/types.h>
 #include <unistd.h>
+
+#include <sysdep.h>
+#include "kernel-features.h"
 
 
 #ifdef __NR_setresuid
@@ -29,21 +31,25 @@ extern int __setresuid (uid_t ruid, uid_t euid, uid_t suid);
 int
 seteuid (uid_t uid)
 {
+#if __ASSUME_32BITUIDS > 0
+  return INLINE_SYSCALL (setresuid32, 3, -1, uid, -1);
+#else
   int result;
   /* First try the syscall.  */
-#ifdef __NR_setresuid
+# ifdef __NR_setresuid
   result = __setresuid (-1, uid, -1);
-#if __ASSUME_SETRESUID_SYSCALL > 0
+#  if __ASSUME_SETRESUID_SYSCALL > 0
   if (0)
-#else
+#  else
   if (result == -1 && errno == ENOSYS)
-#endif
+#  endif
     /* No system call available.  Use emulation.  This may not work
        since `setreuid' also sets the saved user ID when UID is not
        equal to the real user ID, making it impossible to switch back.  */
-#endif
+# endif
     result = __setreuid (-1, uid);
 
   return result;
+#endif
 }
 libc_hidden_def (seteuid)
